examples/test/testpolicy14361.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14361
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key38: value47
      key24: value40
      key21: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value8
          key48: value11
          key49: value3
      podSelector:
        matchLabels:
          key29: value1
          key27: value49
